--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <li><a class="nav-link scrollto " href="#work">Projects</a></li>
           <li><a class="nav-link scrollto " href="#experience-logs">Experience</a></li>
           <li><a class="nav-link scrollto " href="inzynierka.pdf">BEng Thesis</a></li>
+          <li><a class="nav-link scrollto " href="https://github.com/Cez02">Github</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -89,7 +90,7 @@
                 <div class="col-md-6">
                   <div class="row" style="text-align: center;">
                     <div class="about-img">
-                      <img src="assets/img/CVPhoto2.jpg" class="img-fluid rounded b-shadow-a" style="max-width: 50%;" alt="">
+                      <img src="assets/img/CVPhoto3.jfif" class="img-fluid rounded-circle b-shadow-a" style="max-width: 50%;" alt="">
                     </div>
                   </div>
                   <div class="skill-mf">
@@ -127,7 +128,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine. Since then my knowledge of computer systems and programs has developed quite a bit. My most recent focuses are: advanced computer graphics (physics-based renderers), a passion project for the Vaultears team and working on my bachelor of engineering diploma.
+                      Hi, I'm Cezary, a CompSci student with a passion for game development, software engineering and algorithmics. During my days in secondary school I developed an interest in game development, which I nurtured by studying the Unity game engine. Since then my knowledge of computer systems and programs has developed quite a bit. My most recent focuses are: advanced computer graphics (physics-based renderers), a passion project for the Vaultears team and working on my master's degree.
                     </p>
                     <p class="lead">
                       Alongside my Unity journey, I also studied C++ and algorithmics, which I too find myself very comfortable with, proven by the fact I've been teaching olimpiad-level topics at my old high school throughout my academic years. And although I live and breath computing, I do enjoy playing guitar, drawing and sketching, exercising, listening to some good music and playing games (mostly RPGs, RTSs and casual action games). I also accept graphic design commisions for a variety of projects.
@@ -192,7 +193,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Boating Away</h2>
+                    <h2 class="w-title">Boating Away (Unlisted)</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Mobile game</span> / <span class="w-date">June 2021</span>
                     </div>
